compiler/testData/diagnostics/tests/UnitByDefaultForFunctionTypes.jet
fun foo(f : () -> Unit) {
    val <!UNUSED_VARIABLE!>x<!> : Unit = f()
}
